# nano-scGPT

./: .gitignore  LICENSE  README.md  model.py  pyproject.toml  scGPT_tokenizer.py
nano_scgpt/: model.py  scGPT_tokenizer.py
tasks/: embedding.py  timed_embedding.py
