[project]
name = "nano-scgpt"
version = "0.1.0"
description = "Minimal reimplementation of scGPT for inference, fine-tuning, and training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scanpy",
    "huggingface-hub",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nano_scgpt*"]
